--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 {"pinned_posts":[
+    "@steem-ace/steemace-daily-news-15-07-2019-or-tags-over-500-accounts-staked-and-featured-posts-added",
     "@steem-ace/steemace-daily-news-14-07-2019-or-acetube-token-burn-and-looking-for-good-curators"
 ],
 "notices":[
