--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-{"pinned_posts":[
-    "@steem-ace/steemace-daily-news-15-07-2019-or-tags-over-500-accounts-staked-and-featured-posts-added",
-    "@steem-ace/steemace-daily-news-14-07-2019-or-acetube-token-burn-and-looking-for-good-curators"
-],
+{"pinned_posts":[],
 "notices":[
-    {"permalink":"@steem-ace/a-new-scot-tribe-on-steem-steemace-com-for-gaming-content-or-over-100k-sp-7-5k-pal-and-120-splinterlands-beta-booster-to-reward","tag":"Announcement"}
+    {"permalink":"@steem-ace/steemace-daily-news-15-07-2019-or-tags-over-500-accounts-staked-and-featured-posts-added","tag":"Announcement"},
+    {"permalink":"@steem-ace/steemace-daily-news-14-07-2019-or-acetube-token-burn-and-looking-for-good-curators","tag":"Announcement"}
 ]}
