--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-{"pinned_posts":["@steem-ace/1-splinterlands-tournament-by-steemace-take-part-for-free"],
+{"pinned_posts":[],
 "notices":[
-    {"permalink":"@steem-ace/steemace-daily-news-16-07-2019-or-splinterlands-tournament","tag":"Announcement"},
-    {"permalink":"@steem-ace/steemace-daily-news-15-07-2019-or-tags-over-500-accounts-staked-and-featured-posts-added","tag":"Announcement"}
+    {"permalink":"@steem-ace/steemace-daily-news-17-07-2019-or-another-curator-and-the-first-splinterlands-tournament","tag":"Announcement"},
+    {"permalink":"@steem-ace/steemace-daily-news-16-07-2019-or-splinterlands-tournament","tag":"Announcement"}
 ]}
