--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-{"pinned_posts":["@steem-ace/nextcolony-contest-to-win-chests-worth-1-000-steem",
-                 "@ladywalker/steemace-is-only-for-gaming-content-what-is-meant-by-that-specifically"],
+{"pinned_posts":[
+    "@steem-ace/nextcolony-contest-to-win-chests-worth-1-000-steem",
+    "@ladywalker/steemace-is-only-for-gaming-content-what-is-meant-by-that-specifically",
+],
 "notices":[
-    {"permalink":"@steem-ace/steemace-daily-news-19-07-2019-or-nextcolony-contest-and-first-pob-payouts","tag":"Announcement"},
+    {"permalink":"@steem-ace/steemace-daily-news-19-07-2019-or-nextcolony-contest-and-first-pob-payouts","tag":"Announcement"}
 ]}
