--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-{"pinned_posts":[
-    "@ladywalker/steemace-is-only-for-gaming-content-what-is-meant-by-that-specifically",
-    "@thebluewin/why-it-s-important-to-use-good-tags-for-your-post",
-],
+{"pinned_posts":["@ladywalker/steemace-is-only-for-gaming-content-what-is-meant-by-that-specifically",
+                 "@thebluewin/why-it-s-important-to-use-good-tags-for-your-post"],
 "notices":[
-    {"permalink":"@steem-ace/steemace-daily-news-19-07-2019-or-nextcolony-contest-and-first-pob-payouts","tag":"Announcement"},
-    {"permalink":"@steem-ace/steemace-daily-news-18-07-2019-or-clarification-of-gaming-and-10-tags-possible","tag":"Announcement"}
+    {"permalink":"@steem-ace/steemace-daily-news-18-07-2019-or-clarification-of-gaming-and-10-tags-possible","tag":"Announcement"},
+    {"permalink":"@steem-ace/steemace-daily-news-17-07-2019-or-another-curator-and-the-first-splinterlands-tournament","tag":"Announcement"}
 ]}
