--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-{"pinned_posts":["@ladywalker/steemace-is-only-for-gaming-content-what-is-meant-by-that-specifically",
-                 "@steem-ace/nextcolony-contest-to-win-chests-worth-1-000-steem"],
+{"pinned_posts":["@ladywalker/steemace-is-only-for-gaming-content-what-is-meant-by-that-specifically"],
 "notices":[
     {"permalink":"@steem-ace/steemace-daily-news-20-07-2019-or-buyback-token-burn-starting-on-monday","tag":"Announcement"}
 ]}
