--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-{"pinned_posts":["@ladywalker/steemace-is-only-for-gaming-content-what-is-meant-by-that-specifically"],
+{"pinned_posts":["@steem-ace/2-splinterlands-tournament-by-steemace-170-steem-prize-or-sign-up-for-gg"],
 "notices":[
+    {"permalink":"@ladywalker/steemace-is-only-for-gaming-content-what-is-meant-by-that-specifically","tag":"Guidelines"},
     {"permalink":"@steem-ace/steemace-daily-news-23-07-2019-or-token-burn-curation-and-splinterlands","tag":"Announcement"}
 ]}
