--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-{"pinned_posts":["@steem-ace/2-splinterlands-tournament-by-steemace-170-steem-prize-or-sign-up-for-gg"],
+{"pinned_posts":["@steem-ace/2-splinterlands-tournament-by-steemace-170-steem-prize-or-sign-up-for-gg",
+                 "@steem-ace/steemace-is-for-gaming-content-what-is-gaming-content-updated-version"],
 "notices":[
     {"permalink":"@steem-ace/steemace-is-for-gaming-content-what-is-gaming-content-updated-version","tag":"Guidelines"},
     {"permalink":"@steem-ace/steemace-daily-news-24-07-2019","tag":"Announcement"}
