--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
                  "@steem-ace/steemace-guild-in-steemmonsters-want-to-join"],
 "notices":[
     {"permalink":"@steem-ace/steemace-is-for-gaming-content-what-is-gaming-content-updated-version","tag":"Guidelines"},
+    {"permalink":"@steem-ace/nextcolony-creativity-contest-win-chests-and-ccc-tokens","tag":"Contest"},
     {"permalink":"@steem-ace/steemace-daily-news-03-08-2019","tag":"Announcement"}
 ]}
