--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
                  "@steem-ace/steemace-guild-in-steemmonsters-want-to-join"],
 "notices":[
     {"permalink":"@steem-ace/steemace-is-for-gaming-content-what-is-gaming-content-updated-version","tag":"Guidelines"},
-    {"permalink":"@steem-ace/steemace-daily-news-11-08-2019","tag":"Announcement"}
+    {"permalink":"@steem-ace/second-gg-airdrop-for-steemace-stakeholders","tag":"Announcement"},
+    {"permalink":"@steem-ace/steemace-daily-news-11-08-2019-second-airdrop-and-sbi-giveaway","tag":"Announcement"}
 ]}
