--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 {"pinned_posts":["@steem-ace/steemace-asking-for-delegations-support-great-gaming-content-37-apr",
                  "@steem-ace/steemace-guild-in-steemmonsters-want-to-join"],
 "notices":[
+    {"permalink":"@steem-ace/more-advantages-for-gg-ggm-stakeholders-are-coming","tag":"Announcement"},
     {"permalink":"@steem-ace/steemace-is-for-gaming-content-what-is-gaming-content-updated-version","tag":"Guidelines"},
     {"permalink":"@steem-ace/steemace-daily-news-20-08-2019-sell-wall-removed-and-buy-wall-set-up","tag":"Announcement"}
 ]}
